fix docker db connect, queues v2

--- a/tx-app/.env
+++ b/tx-app/.env
@@ -1,4 +1,9 @@
 DB_PASSWORD=qwerty
 
-// sudo docker run --name=todo_db -e POSTGRES_PASSWORD='qwerty' -p 5555:5432 -d --rm postgres
-// migrate -path ./schema -database 'postgres://postgres:qwerty@localhost:5555/postgres?sslmode=disable' up
+LOG_LEVEL = debug
+RMQ_URL = amqp://guest:guest@localhost:5000/
+
+DB_USER=postgres
+DB_PASSWORD=qwerty
+DB_NAME=db
+DB_HOST=postgres
