--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.6'
-
 networks:
   rabbitmq-example:
     driver: bridge
@@ -13,40 +11,59 @@ services:
       - ./rabbit-mq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf:ro
     ports:
       - "8080:15672"
-      # - "5000:5673" # Expose this port while running the producer and consumer services locally
     healthcheck:
       test: [ "CMD", "rabbitmqctl", "status"]
       interval: 5s
       timeout: 15s
       retries: 5
+    depends_on:
+      - postgres
   producer:
+  
     build: ./producer
     ports:
-      - "5151:5050" # Port to access our REST API
+      - "5050:5050" 
     networks:
       - rabbitmq-example
     depends_on:
+      - postgres
       - rabbitmq
-    environment: # Sample env variables for producer
+    environment:
       GIN_MODE: "release"
       GIN_HTTPS: "false"
       GIN_ADDR: "0.0.0.0"
-      GIN_PORT: "5151"
+      GIN_PORT: "5050"
       LOG_LEVEL: "debug"
       RMQ_URL: "amqp://guest:guest@rabbitmq:5673/"
-  consumer:
-    build: ./consumer
+  # tx-app:
+  #   networks:
+  #     - rabbitmq-example
+  #   build: ./tx-app
+  #   depends_on:
+  #     - rabbitmq
+  #     - postgres
+  #   restart: on-failure
+  #   ports:
+  #     - "8888:8000"
+  #   environment: 
+
+  #     LOG_LEVEL: "debug"
+  #     RMQ_URL: "amqp://guest:guest@rabbitmq:5673/"
+  postgres:
     networks:
       - rabbitmq-example
-    depends_on:
-      - rabbitmq
-    restart: on-failure
-    environment: # Sample env variables for consumer
-      LOG_LEVEL: "debug"
-      RMQ_URL: "amqp://guest:guest@rabbitmq:5673/"
-postgres:
-  image: 'postgres:13-alpine'
-  volumes:
-    - ./rabbit-mq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf:ro
-  ports:
-    - "5555:5432"
+    image: 'postgres:13-alpine'
+    environment:
+       - POSTGRES_USER=${DB_USER}  
+       - POSTGRES_PASSWORD=${DB_PASSWORD}
+       - POSTGRES_DB=${DB_NAME}
+       - DATABASE_HOST=${DB_HOST} 
+    ports:
+      - "5555:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+  
