--- a/tx-app/configs/Config.yml
+++ b/tx-app/configs/Config.yml
@@ -1,13 +1,8 @@
-port: "8000"
+port: "8888"
 
 db: 
   username: "postgres"
-  host: "127.0.0.1"
+  host: "localhost"
   port: "5555"
   dbname: "postgres"
   sslmode: "disable"
-
-rabbitmq:
- username:
- host:
- port:
